minor syntax issue

--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,7 @@ layout: default
 foo: bar
 ---
 <h1>abcd</h1>
-<p>{{baseurl}}</p>
-<p>{{relative_url}}</p>
+<p>{{site.url}}</p>
+<p>{{site.baseurl}}</p>
+<p>{{site.relative_url}}</p>
 
