--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@ subtitle: An easy way to generate payment links for Stripe
 <p> View all your Products on Stripe <a href="https://dashboard.stripe.com/products"> here</a>. Select the product for which you'd like to generate a payment link. The Product ID will be visible just below the description</p>
 <div class="column is-12"></div>
 <figure class="image is-6by3">
-    <img src="/assets/images/sku_id.png">
+    
+    <img src="{{site.url}}{{site.baseurl}}/assets/images/sku_id.png">
 </figure>
 </12>
 <p>Paste your SKU ID (sku_abcd1234) in the form at the bottom of the page and come back for Step 3. </p>
