--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ subtitle: An easy way to generate payment links for Stripe
 
 <h1>Step 5 : Generate your Payment Link</h1>
 
-Your SKU ID : <input id="skuId" placeholder="sku_abcd1234" onchange=check() oninput=check()>
-Your Publishable key ID : <input id="publicKey" placeholder="pk_live_abcd1234" onchange=check() oninput=check()>
+Your SKU ID : <input id="skuId" placeholder="sku_abcd1234" onchange=check() oninput=check()><br/>
+Your Publishable key ID : <input id="publicKey" placeholder="pk_live_abcd1234" onchange=check() oninput=check()><br/>
 Your Link : <a href="" id="link" ></a>
 
